<resources>
    <string name="app_name">Online Inventory App</string>
    <string name="alert_battery_prt1">\"The battery is at \"</string>
    <string name="alert_battery_prt2">\" percent!\"</string>
    <string name="toast_incomingbroadcast">Incoming Broadcasts</string>
    <string name="toast_broadcastreceived">Received inventory Broadcast!</string>
    <string name="Toast_AccountDeleted">Account Deleted</string>
    <string name="Toast_UserNotFound">Username does not exists</string>
    <string name="Toast_DuplicateUser">Username already exists</string>
    <string name="Toast_AccountCreated">Account Created</string>
    <string name="Toast_LogOut">Logged Out</string>
    <string name="Toast_menu_default">menu tapped</string>
    <string name="Toast_No">No</string>
    <string name="Dialog_okay">Okay</string>
    <string name="Toast_IncorrectPassword">Password was incorrect</string>
    <string name="Toast_StorageNotWritable">Storage is not writable</string>
    <string name="Toast_FileSaved">File Saved</string>
    <string name="label_login_welcometxt">Welcome</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_noaccount">Don\'t have an account?</string>
    <string name="label_forgotpassword">Forgot Password?</string>
    <string name="label_createaccount">Create Account</string>
    <string name="label_sampleinventorytitle">Sample Inventory Title</string>
    <string name="label_sampleitemtitle">Sample Item Title</string>
    <string name="label_date">Date</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_creategroup">Create Group:</string>
    <string name="label_groupcode">Shareable Group Code</string>
    <string name="label_groupname">Enter Group Name</string>
    <string name="label_grouppassword">Enter Group Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="title_createaccount">Create Account</string>
    <string name="label_enterusername">Enter Username:</string>
    <string name="label_enterpassword">Enter Password:</string>
    <string name="btn_create">Create</string>
    <string name="fab_addinventory_contentdescription">add inventory item</string>
    <string name="label_newinventoryname">New Inventory Name</string>
    <string name="fab_addinventoryitem_contentdescription">add inventory item</string>
    <string name="btn_save">Save</string>
    <string name="btn_savetofile">Save To File</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_deleteaccount">Delete Account</string>
    <string name="btn_edittitle">Edit Title</string>
    <string name="alarm_sample_text">The alarm has been rung!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_invalidEmail">Please enter a valid email</string>
    <string name="toast_accountcreated">Account Created</string>
    <string name="error_emptytextbox">Textbox cannot be empty</string>
    <string name="error_shortpassword">Password is too short</string>
    <string name="toast_emailSent">Email Sent</string>
    <string name="toast_reauthenticated">all good</string>
    <string name="toast_passwordupdate">Password has been updated</string>
    <string name="toast_updateemailsuccess">Email updated</string>
    <string name="updateemailfailed">Email update failed</string>
    <string name="toast_accountdeleted">Account Deleted</string>
    <string name="toast_accountupdated">Account Update</string>
    <string name="toast_emailsent">Verification Email Sent</string>
    <string name="hint_passwordincorrect">Password is incorrect</string>
    <string name="title_offlineinventory">Offline Inventories</string>
    <string name="pref_inventory_key">InventoryJSON</string>
    <string name="label_joingroup">Join Group</string>
    <string name="hint_groupcode">Group code</string>
    <string name="hint_grouppassword">Group password</string>
    <string name="btn_join">Join</string>
    <string name="label_createinventory">Create Inventory</string>
    <string name="hint_inventoryname">Inventory Name</string>
    <string name="label_renamegroup">Rename Group</string>
    <string name="hint_newgroup">New Group Name</string>
    <string name="label_renameinventory">Rename Inventory</string>
    <string name="hint_newinventory">New Inventory Name</string>
    <string name="label_rusure">Are You Sure</string>
    <string name="btn_yes">YES</string>
    <string name="emply_inventory">There are no lists to show, so ...</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="btn_createlist">Create List</string>
    <string name="add_inventory_item">add inventory item</string>
    <string name="label_email">Enter email:</string>
    <string name="label_displayname">Enter name:</string>
    <string name="hint_email">Email</string>
    <string name="label_retypepw">Retype Password:</string>
    <string name="hint_displayname">Display Name</string>
    <string name="btn_creategroup">Create Group</string>
    <string name="cd_add_group_item">add group item</string>
    <string name="cd_create_group_item">create group item</string>
    <string name="cd_more_item">expand more options</string>
    <string name="tab_inventories">Inventories</string>
    <string name="tab_members">Members</string>
    <string name="cd_add_item">add item</string>
    <string name="cd_rename_inventory">rename inventory</string>
    <string name="login_email_hint">Email</string>
    <string name="btn_login">Login</string>
    <string name="sample_group_title">Sample Group Title</string>
    <string name="sample_group_title_hint">Group Title</string>
    <string name="label_code">Code:</string>
    <string name="hint_title">Title</string>
    <string name="hint_itemname">Item Name</string>
    <string name="toast_groupinvalid">Group no longer exists</string>
    <string name="toast_inventoryinvalid">Inventory no longer exists</string>
    <string name="toast_duplicateinventory">Please provide a unique inventory name</string>
    <string name="toast_invalidlogintextbox">Enter both Email and Password</string>
    <string name="toast_loginfailed">Failed to sign in</string>
    <string name="toast_nointernet">Internet connection not found!</string>
    <string name="toast_displaytooshort">Display name is too short</string>
    <string name="toast_emptydisplayname">Please enter a display name</string>
    <string name="toast_reenterpassword">Please re-enter your password</string>
    <string name="toast_passwordsnomatch">The passwords do not match</string>
    <string name="hint_groupnotfound">Group Does Not Exist</string>
    <string name="hint_codetaken">Group Code Already Taken</string>
    <string name="toast_joininggroup">joining group</string>
    <string name="nav_offlinebtn_text">Offline</string>
    <string name="nav_onlinebtn_text">Online</string>
    <string name="menu_online_logout">Logout</string>
    <string name="menu_online_deleteaccount">Delete Account</string>
    <string name="btn_close">close</string>
    <string name="label_profile">Profile</string>
    <string name="profile_label_email">Email</string>
    <string name="profile_label_displayname">Display Name:</string>
    <string name="profile_label_id">User ID:</string>
</resources>