<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".online.AccountCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pageview_createaccount">


        <TextView
            android:id="@+id/label_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/title_createaccount"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/label_createAccount"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/label_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/label_enterusername"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username_editText"
                android:layout_width="0dp"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:maxLength="24"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:hint="@string/label_username" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/label_enterpassword"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:maxLength="24"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:hint="@string/label_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_createaccount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:onClick="DBinsert"
            android:text="@string/btn_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ListView
            android:visibility="visible"
            android:id="@+id/db_listview"
            android:layout_width="357dp"
            android:layout_height="239dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>