<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minWidth="200dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dlog_background"
    >

    <TextView
        android:id="@+id/textview_renameInventory"
        style="@style/basicWhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/label_rusure"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_renameInventory"
        android:layout_marginBottom="10dp"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:maxWidth="70dp"
            android:maxHeight="40dp"
            android:minWidth="65dp"
            android:minHeight="35dp"
            android:padding="5dp"
            android:stateListAnimator="@null"
            android:text="@string/btn_cancel"
            android:textColor="@color/tile_color"
            android:textSize="11sp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryDarkColor"
            android:maxWidth="70dp"
            android:maxHeight="40dp"
            android:minWidth="65dp"
            android:minHeight="35dp"
            android:padding="5dp"
            android:text="@string/btn_yes"
            android:textSize="11sp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>