<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".online.LoginFragmentOnline"
    android:background="@drawable/purp_gradient_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottieAnimationView"
                android:breakStrategy="balanced"
                android:text="@string/label_login_welcometxt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp"
                app:layout_constraintHorizontal_bias="0.5" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:scaleX="3"
                android:scaleY="3"
                app:layout_constraintHorizontal_bias="0.498"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_notes"
                tools:frameToShow="true" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="248dp"
            android:layout_height="239dp"
            android:src="@drawable/book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00" />

        <EditText
            android:id="@+id/edittext_loginEmail"
            style="@style/loginEditText"
            android:layout_marginHorizontal="10dp"
            android:hint="Email"
            android:text="me@localhost.com"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintVertical_bias="0.1"
            android:layout_marginVertical="30dp"/>

        <EditText
            android:id="@+id/edittext_TextPassword"
            style="@style/loginEditText"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:text="123456"
            app:layout_constraintEnd_toEndOf="@+id/edittext_loginEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittext_loginEmail"
            app:layout_constraintTop_toBottomOf="@+id/edittext_loginEmail" />

        <LinearLayout
            android:id="@+id/prompt_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            >

            <TextView
                android:id="@+id/textView_label_createaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_noaccount"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textbtn_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/label_createaccount"
                android:textColor="@color/primaryLightColor"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textbtn_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_forgotpassword"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/edittext_TextPassword"
            app:layout_constraintTop_toBottomOf="@+id/edittext_TextPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@+id/prompt_createAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textbtn_forgotPassword"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintHorizontal_bias="0.5"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>